--- a/index.html
+++ b/index.html
@@ -178,6 +178,17 @@
             <i class="fas fa-copy ml-2 group-hover:rotate-12 transition-transform"></i>
         </button>
 
+        <!-- Discord Entry -->
+        <div class="mt-8 relative group cursor-pointer">
+            <!-- Glow Effect -->
+            <div class="absolute -inset-0.5 bg-gradient-to-r from-indigo-500 to-purple-600 rounded-lg blur opacity-30 group-hover:opacity-75 transition duration-1000 group-hover:duration-200"></div>
+            <a href="https://discord.gg/ceuqws6tcK" target="_blank" class="relative flex items-center justify-center space-x-3 bg-stone-900 border border-stone-800/80 rounded-lg py-3 px-4 hover:bg-stone-800 transition-all duration-200">
+                <i class="fab fa-discord text-indigo-400 text-2xl group-hover:scale-110 group-hover:rotate-12 transition-transform duration-300"></i>
+                <span class="text-stone-300 font-bold text-sm tracking-wide group-hover:text-indigo-200 transition-colors">歡迎加入醋飯的dc頻道唷</span>
+                <i class="fas fa-arrow-right text-indigo-500/50 text-xs absolute right-4 group-hover:translate-x-1 group-hover:text-indigo-400 transition-all"></i>
+            </a>
+        </div>
+
         <!-- Toast Notification -->
         <div id="toast" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-stone-800 text-amber-500 px-6 py-3 rounded-lg shadow-2xl border border-amber-500/30 opacity-0 pointer-events-none transition-opacity duration-300 z-50 flex items-center">
             <i class="fas fa-check-circle mr-2"></i>
